k8s-files/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: care-event-in-service
spec:
 replicas: 2
 strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 0
     maxSurge: 1
 template:
   metadata:
     labels:
       app: care-event-in-service
   spec:
     containers:
       - name: care-event-in-service
         image: 'care-event-in-svc:v1.0.0'
         ports:
           - containerPort: 9095
         readinessProbe:
           httpGet:
             path: /actuator/health
             port: 9095
           initialDelaySeconds: 60
           periodSeconds: 5
         volumeMounts:
         - mountPath: /host
           name: host-volume
     volumes:
     - name: host-volume
       emptyDir: {}
