k8s-files/service.yml
apiVersion: v1
kind: Service
metadata:
 name: care-event-in-service
 labels:
   name: care-event-in-service
spec:
 ports:
   - port: 9095
     targetPort: 9095
     protocol: TCP
 selector:
   app: care-event-in-service
 type: NodePort
