k8s-files/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: care-event-in-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: xxxxxx.info
   http:
     paths:
     - path: /*
       backend:
         serviceName: care-event-in-service
         servicePort: 9095
